@@ -136,8 +136,12 @@ class fc(Task.Task):
 				for t in outs[k]:
 					tmp.extend(t.outputs)
 				a.dep_nodes.extend(tmp)
-				# FIXME sort does not have a key on python 2.3
-				a.dep_nodes.sort(key=lambda x: x.abspath())
+
+				# old python versions
+				try:
+					a.dep_nodes.sort(key=lambda x: x.abspath())
+				except:
+					a.dep_nodes.sort(lambda x, y: cmp(x.abspath(), y.abspath()))
 
 		# the task objects have changed: clear the signature cache
 		for tsk in lst:
